# zettabrain-rag

./:    .env.example  .gitignore  CLAUDE.md  MANIFEST.in  Makefile  README.md  install.cmd  install.ps1  install.sh  nfs_setup.sh  provision.py  pyproject.toml  setup.sh
.github/workflows/: ci.yml  deploy-install.yml  deploy-website.yml
openclaw-skill/zettabrain-rag/: SKILL.md
scripts/: linkedin.py
src/: 01_chromadb_setup.py  05_ingest_documents.py
zettabrain_rag/: __init__.py  cli.py  retrieval.py  server.py
zettabrain_rag/certs/: .gitignore
zettabrain_rag/scripts/: 02_embeddings_test.py  03_langchain_rag.py  04_gui.py  05_ingest_documents.py  letsencrypt.sh  nfs_setup.sh  setup.sh  storage_add.sh
zettabrain_rag/static/: index.html
